styles/index.scss
@import 'fonts';
@import 'header';
@import 'overlay';

body {
    height: 100vh;
    margin: 0;
    background-color: #000000;
    display: flex;
    flex-direction: column;
    align-items: center;
}
main {
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
}
.text-container {
    min-height: 70px;
    max-width: 574px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-items: center;
}
/* Changes of text-container at different screens */
@media screen and (min-width: 320px) and (max-width: 768px) {
   .text-container {
    max-width: 217px;
   }
}

